--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
           omni-cache-key-prefix: test
 
       - name: Test
-        run: omni run test
+        run: omni run -L test
 
   build:
     runs-on: ${{ matrix.os }}
@@ -49,7 +49,7 @@ jobs:
         run: bun run ./scripts/apply-version/src/index.ts
 
       - name: Build
-        #run: omni run --project=omni build
+        # run: omni run -p=omni -L build
         run: cargo build --release -p omni
 
       - name: Compress binary on Linux/macOS
