fix: windows not loading projects

--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -79,6 +79,7 @@ tiny-gradient = { workspace = true }
 omni_expressions = { workspace = true }
 omni_collector = { workspace = true }
 shlex = { workspace = true }
+path-clean = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
