chore: add windows case on omni_types OmniPath test cases

--- a/crates/omni_types/Cargo.toml
+++ b/crates/omni_types/Cargo.toml
@@ -18,6 +18,7 @@ merge = { workspace = true, optional = true }
 enum-map = { workspace = true }
 thiserror = { workspace = true }
 strum = { workspace = true }
+path-clean = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
