--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,6 +135,8 @@ omni_generator = { path = "./crates/omni_generator" }
 omni_collector = { path = "./crates/omni_collector" }
 omni_utils = { path = "./crates/omni_utils" }
 tracing-futures = { version = "^0.2.5", features = ["tokio"] }
+pathdiff = { version = "^0.2.3" }
+path-slash = { version = "^0.2.1" }
 
 [profile.release]
 incremental = true
