feat: add max_concurrency flag

--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -80,6 +80,7 @@ omni_expressions = { workspace = true }
 omni_collector = { workspace = true }
 shlex = { workspace = true }
 path-clean = { workspace = true }
+num_cpus = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
