refactor: omni_process

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,7 +29,7 @@
                     "kind": "bin"
                 }
             },
-            "args": ["hash", "workspace"],
+            "args": ["run", "test"],
             "cwd": "${workspaceFolder}"
         },
         {
