--- a/crates/omni_process/Cargo.toml
+++ b/crates/omni_process/Cargo.toml
@@ -14,6 +14,7 @@ eyre = { workspace = true }
 thiserror = { workspace = true }
 strum = { workspace = true }
 tokio = { workspace = true }
+tokio-util = { workspace = true }
 omni_core = { workspace = true }
 portable-pty = { workspace = true }
 terminal_size = { workspace = true }
@@ -28,3 +29,4 @@ derive-new = { workspace = true }
 futures = { workspace = true }
 maps = { workspace = true }
 env = { workspace = true }
+nix = { workspace = true, features = ["process", "term"] }
