--- a/omni/presets/ts-app.omni.yaml
+++ b/omni/presets/ts-app.omni.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
-name: rust-lib
+name: ts-app
 
 extends:
-  - "./rust.omni.yaml"
+  - "./ts.omni.yaml"
 
 meta:
-  type: lib
+  type: app
