--- a/packages/bridge-rpc/project.omni.yaml
+++ b/packages/bridge-rpc/project.omni.yaml
@@ -8,7 +8,9 @@ tasks:
   build:
     command: bun x vite build
 
-  test:unit: bun x vitest --config ./vitest.config.unit.ts run
+  test:unit:
+    command: bun x vitest --config ./vitest.config.unit.ts run
+
   test:integration:
     command: bun x vitest --config ./vitest.config.integration.ts run
     dependencies:
