ci: fix test error due to skipped task

--- a/docs/dev-docs/project.omni.yaml
+++ b/docs/dev-docs/project.omni.yaml
@@ -5,10 +5,10 @@ extends:
 
 tasks:
   test:unit:
-    enabled: false
+    command: ""
 
   test:integration:
-    enabled: false
+    command: ""
 
   test:
-    enabled: false
+    command: ""
