--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,7 +93,7 @@ jobs:
 
   publish-json-schemas:
     runs-on: ubuntu-latest
-    needs: build
+    needs: release
     if: github.ref_type == 'tag'
     steps:
       - name: Setup Omni
