--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -2,7 +2,7 @@
 name = "omni"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
+version = "0.0.0-semantically-released"
 authors.workspace = true
 repository.workspace = true
 
