--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,8 +93,8 @@ jobs:
 
   publish-json-schemas:
     runs-on: ubuntu-latest
-    # needs: release
-    # if: github.ref_type == 'tag'
+    needs: release
+    if: github.ref_type == 'tag'
     steps:
       - name: Setup Omni
         uses: omni-oss/setup-omni@v1
