--- a/crates/omni_collector/project.omni.yaml
+++ b/crates/omni_collector/project.omni.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../artifacts/json-schemas/project.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/artifacts/json-schemas/project-latest.json
 name: omni_collector
 
 extends:
