--- a/packages/vite-config/project.omni.yaml
+++ b/packages/vite-config/project.omni.yaml
@@ -1,2 +1,2 @@
-# yaml-language-server: $schema=../../artifacts/json-schemas/project.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/artifacts/json-schemas/project-latest.json
 name: vite-config
