--- a/workspace.omni.yaml
+++ b/workspace.omni.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=./artifacts/json-schemas/workspace.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/artifacts/json-schemas/workspace-latest.json
 
 projects:
   - cli/**
