--- a/.github/workflows/publish-json-schemas.yaml
+++ b/.github/workflows/publish-json-schemas.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Omni
         uses: omni-oss/setup-omni@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN || github.token }}
 
       - name: Generate JSON Schemas
         shell: bash
