--- a/.github/workflows/publish-json-schemas.yaml
+++ b/.github/workflows/publish-json-schemas.yaml
@@ -15,9 +15,6 @@ on:
         type: string
         default: "latest"
         description: "Version to publish"
-    secrets:
-      GITHUB_TOKEN:
-        required: true
 
 permissions:
   contents: write
@@ -29,7 +26,7 @@ jobs:
       - name: Setup Omni
         uses: omni-oss/setup-omni@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN || github.token }}
+          github-token: ${{ github.token }}
 
       - name: Generate JSON Schemas
         shell: bash
