--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,8 +24,8 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           cache-key-prefix: build
 
-      - name: Setup
-        uses: ./.github/actions/setup
+      - name: Setup Tools
+        uses: ./.github/actions/setup-tools
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           omni-cache-key-prefix: test
