--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -30,11 +30,19 @@ jobs:
           shell: ${{ runner.os == 'Windows' && 'pwsh' || 'bash' }}
           omni-cache-key-prefix: build
 
+      - name: Setup Tools
+        uses: ./.github/actions/setup-tools
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          install-bun: true
+          install-node-modules: true
+          install-node: true
+
       - name: Publish Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_branch: docs
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./json-schemas
+          publish_dir: ./docs
           destination_dir: .
           keep_files: true
