--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,6 +140,7 @@ path-slash = { version = "^0.2.1" }
 atty = { version = "^0.2.14" }
 omni_process = { path = "./crates/omni_process" }
 nix = { version = "^0.30.1" }
+base64 = { version = "^0.22.1" }
 
 [profile.release]
 incremental = true
