--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -69,6 +69,7 @@ omni_cache = { workspace = true }
 omni_hasher = { workspace = true }
 derive_builder = { workspace = true }
 bs58 = { workspace = true }
+base64 = { workspace = true }
 ahash = { workspace = true }
 owo-colors = { workspace = true }
 tiny-gradient = { workspace = true }
