--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,7 @@ jobs:
       - name: Setup Omni
         uses: ./.github/actions/setup-omni
         with:
+          version: v0.4.6
           github-token: ${{ secrets.GITHUB_TOKEN }}
           cache-key-prefix: test
 
@@ -43,12 +44,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
+
       - name: Setup Omni
         uses: ./.github/actions/setup-omni
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           cache-key-prefix: build
+          version: v0.4.6
 
       - name: Setup Tools
         uses: ./.github/actions/setup-tools
