--- a/docs/dev-docs/project.omni.yaml
+++ b/docs/dev-docs/project.omni.yaml
@@ -3,6 +3,12 @@ name: "@repo/dev-docs"
 extends:
   - "@workspace/omni/presets/ts-app.omni.yaml"
 
+cache:
+  key:
+    files:
+      append:
+        - ./astro.config.mjs
+
 tasks:
   test:unit:
     enabled: false
