chore: update packages [skip ci]

--- a/biome.json
+++ b/biome.json
@@ -1,48 +1,50 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
-	"extends": [
-		"./node_modules/@repo/biome-config/formatter.json",
-		"./node_modules/@repo/biome-config/linter.json",
-		"./node_modules/@repo/biome-config/import-sorter.json",
-		"./node_modules/@repo/biome-config/javascript.json",
-		"./node_modules/@repo/biome-config/vcs.json"
-	],
-	"files": {
-		"includes": [
-			"**",
-			"!**/__generated__/**",
-			"!**/gen/**",
-			"!**/routeTree.gen.ts",
-			"!**/styled-system/**",
-			"!**/styled-system-studio/**",
-			"!**/.cache/**",
-			"!**/.git/**",
-			"!**/.svn/**",
-			"!**/node_modules/**",
-			"!**/dist/**",
-			"!**/bin/**",
-			"!**/build/**",
-			"!**/_build/**",
-			"!**/_server/**",
-			"!**/coverage/**",
-			"!**/public/**",
-			"!**/.next/**",
-			"!**/out/**",
-			"!**/output/**",
-			"!**/.output/**",
-			"!**/.obj/**",
-			"!**/.turbo/**",
-			"!**/turbo.lock",
-			"!**/yarn.lock",
-			"!**/package-lock.json",
-			"!**/pnpm-lock.yaml",
-			"!**/pnpm-workspace.yaml",
-			"!**/yarn-error.log",
-			"!**/lerna.json",
-			"!**/tsconfig.json",
-			"!**/tsconfig.tsbuildinfo",
-			"!**/*.tsbuildinfo",
-			"!**/*.config.js"
-		]
-	}
+    "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+    "extends": [
+        "./node_modules/@repo/biome-config/formatter.json",
+        "./node_modules/@repo/biome-config/linter.json",
+        "./node_modules/@repo/biome-config/import-sorter.json",
+        "./node_modules/@repo/biome-config/javascript.json",
+        "./node_modules/@repo/biome-config/vcs.json"
+    ],
+    "files": {
+        "includes": [
+            "**",
+            "!./**/__generated__/**/*",
+            "!./**/gen/**/*",
+            "!./**/routeTree.gen.ts",
+            "!./**/styled-system/**/*",
+            "!./**/styled-system-studio/**/*",
+            "!./**/.cache/**/*",
+            "!./**/.git/**/*",
+            "!./**/.svn/**/*",
+            "!./**/node_modules/**/*",
+            "!./**/dist/**/*",
+            "!./**/bin/**/*",
+            "!./**/build/**/*",
+            "!./**/_build/**/*",
+            "!./**/_server/**/*",
+            "!./**/coverage/**/*",
+            "!./**/public/*.*",
+            "!./**/.next/*.*",
+            "!./**/out/*.*",
+            "!./**/output/*.*",
+            "!./**/.output/*.*",
+            "!./**/.obj/*.*",
+            "!./**/.turbo/*.*",
+            "!**/turbo.lock",
+            "!**/yarn.lock",
+            "!**/package-lock.json",
+            "!**/pnpm-lock.yaml",
+            "!**/pnpm-workspace.yaml",
+            "!**/yarn-error.log",
+            "!**/lerna.json",
+            "!**/tsconfig.json",
+            "!**/tsconfig.tsbuildinfo",
+            "!**/*.tsbuildinfo",
+            "!**/*.config.js",
+            "!./**/*.gen.*",
+            "!./**/*.generated.*"
+        ]
+    }
 }
