--- a/docs/dev-docs/.gitignore
+++ b/docs/dev-docs/.gitignore
@@ -1,21 +1,10 @@
-# build output
-dist/
-# generated types
-.astro/
+node_modules
 
-# dependencies
-node_modules/**
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
 .DS_Store
+.cache
+.vercel
+.output
+.nitro
+/build/
+
+.tanstack
