--- a/docs/dev-docs/project.omni.yaml
+++ b/docs/dev-docs/project.omni.yaml
@@ -1,25 +1,29 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
 name: "@repo/dev-docs"
-extends:
-  - "@workspace/omni/presets/ts-app.omni.yaml"
 
 cache:
   key:
     files:
       append:
-        - ./astro.config.mjs
+        - content/**/*
+        - source.config.ts
+        - vite.config.ts
+        - source.generated.ts
 
 tasks:
+  test:
+    enabled: false
+
   test:unit:
     enabled: false
 
   test:integration:
     enabled: false
 
-  test:
-    enabled: false
-
   build:
     output:
       files:
-        - ./dist/**/*
+        - .output/**/*
+
+extends:
+  - "@workspace/omni/presets/ts-app.omni.yaml"
