--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@repo/biome-config": "workspace:*",
         "@repo/tsconfig": "workspace:*",
         "@biomejs/biome": "^2.2.2",
+        "@repo/apply-version": "workspace:*",
         "vite": "^7.1.3",
         "vitest": "^3.2.4",
         "typescript": "^5.9.2"
