--- a/scripts/apply-version/package.json
+++ b/scripts/apply-version/package.json
@@ -1,8 +1,12 @@
 {
     "name": "@repo/apply-version",
     "version": "0.0.0-semantically-released",
+    "scripts": {
+        "build": "bun run ./build.ts"
+    },
+    "bin": "./bin/index.js",
     "exports": {
-        ".": "./src/index.ts"
+        ".": "./src/lib.ts"
     },
     "devDependencies": {
         "@repo/tsconfig": "workspace:*",
