--- a/docs/dev-docs/project.omni.yaml
+++ b/docs/dev-docs/project.omni.yaml
@@ -23,7 +23,7 @@ tasks:
   build:
     output:
       files:
-        - .output/**/*
+        - .vercel/**/*
 
 extends:
   - "@workspace/omni/presets/ts-app.omni.yaml"
