--- a/.github/workflows/preview-docs.yaml
+++ b/.github/workflows/preview-docs.yaml
@@ -54,4 +54,4 @@ jobs:
         run: omni run -p '@repo/dev-docs' build
 
       - name: Publish Docs
-        run: vercel deploy --prebuilt --token=${{ env.VERCEL_TOKEN }} --cwd ./docs/dev-docs
+        run: vercel deploy --token=${{ env.VERCEL_TOKEN }} --cwd ./docs/dev-docs
