--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -46,15 +46,15 @@ jobs:
           install-bun: true
           install-node-modules: true
           install-node: true
-          
+
       - name: Install Vercel CLI
         run: bun add -g vercel
-        
+
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ env.VERCEL_TOKEN }}
-        
+
       - name: Generate Docs
         run: omni run -p '@repo/dev-docs' build
 
       - name: Publish Docs
-        run: vercel deploy --prebuilt --token=${{ env.VERCEL_TOKEN }} --cwd ./docs/dev-docs
+        run: vercel deploy --token=${{ env.VERCEL_TOKEN }} --cwd ./docs/dev-docs
