ci: rename publish site jobs [skip ci]

--- a/.github/workflows/preview-site.yaml
+++ b/.github/workflows/preview-site.yaml
@@ -22,7 +22,7 @@ env:
   VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 
 jobs:
-  publish-docs:
+  preview-site:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
