--- a/Cargo.toml
+++ b/Cargo.toml
@@ -141,6 +141,7 @@ atty = { version = "^0.2.14" }
 omni_process = { path = "./crates/omni_process" }
 nix = { version = "^0.30.1" }
 base64 = { version = "^0.22.1" }
+clap_declspec = { path = "./crates/clap_declspec" }
 
 [profile.release]
 incremental = true
