--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "dev": "vite dev",
         "build": "vite build && tsc --noEmit",
-        "preview": "bun x serve ./.vercel/output/static"
+        "preview": "bun x serve ./.vercel/output/static",
+        "gen:declspec": "omni declspec >| omni-declspec.json",
+        "gen:refdocs": "bun run ./scripts/generate-references ./omni-declspec.json ./content/docs/references"
     },
     "dependencies": {
         "@orama/orama": "^3.1.12",
@@ -20,7 +22,9 @@
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwind-merge": "^3.3.1",
-        "vite": "^7.1.3"
+        "vite": "^7.1.3",
+        "zod": "^4.1.5",
+        "commander": "^14.0.0"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.1.12",
@@ -28,6 +32,7 @@
         "@types/react": "^19.1.12",
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react": "^5.0.2",
+        "@commander-js/extra-typings": "14.0.0",
         "tailwindcss": "^4.1.12",
         "typescript": "^5.9.2",
         "vite-tsconfig-paths": "^5.1.4"
